# formation-kleia-up

./: .dockerignore  .gitignore  AGENT.md  AGORA.md  CHANGELOG_AGENT.md  DEFINITION_OF_DONE.md  LESSONS.md  OPEN_QUESTIONS.md  README.md  SYSTEM_CONTRACT.md  TASK_TEMPLATE.md  TODO_CURRENT.md  fix_all.ps1  start_all.bat  temp_test.py
backend/: .env.example  AGORA_REPRISE.md  alembic.ini  crash_test.py  db.sqlite3  pyproject.toml  requirements.txt  run_test.py  seed.py  seed_piliers.py  start.bat  start.sh  test_auth.py  test_client.py  test_enrollments.py  write_form.py  write_form2.py
backend/alembic/: env.py
backend/alembic/versions/: 260a9c8bb9bc_add_journal_entries.py  40ac011a548d_init.py  499779af7e6b_add_gamification_points.py  63c4b60ee6fe_initial_schema_with_badges_and_resources.py  c37db4835b31_add_audio_resource_assets.py  e3aff375d73b_init.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  badge.py  base.py  certificate.py  course.py  enrollment.py  gamification.py  journal.py  progress.py  quiz.py  resource.py  user.py  video.py
backend/app/schemas/: __init__.py  ai.py  auth.py  badge.py  certificate.py  course.py  enrollment.py  gamification.py  journal.py  progress.py  quiz.py  resource.py  user.py  video.py
backend/app/services/: ai_service.py  auth.py  brevo.py  certificate_service.py  course_service.py  gamification_service.py  points_service.py  progress_service.py  storage.py  streak_service.py
backend/scripts/: create_tables.py
(+163 files in other folders)
