[project]
name = "kleia-lms-backend"
version = "0.1.0"
description = "Backend API pour la plateforme e-learning Kleia-up"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "google-auth>=2.37.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.36.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"